Update and rename calculators.html to index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <script src="script.js" defer></script>
 </head>
 <body>
+    <div>
+        <h1>Calculator App</h1>
+    </div>
     <div class="Calculator">
         <div class="calci_keys">
             <input type="text" placeholder="0" id="Output">
